--- a/ARCHIVE/nyanpass 1.3c/css/style.css
+++ b/ARCHIVE/nyanpass 1.3c/css/style.css
@@ -14,9 +14,62 @@ body {
 	user-select: none;
 }
 
-#border {
-	height: calc(100vh - 10px);
-	margin: 5px 5px 5px 5px;
+#handle {
+	position: fixed;
+	top: 1px;
+	right: 65px;
+	width: 125px;
+	height: 25px;
+	border-radius: 50px;
+	background: #947a4f;
+	z-index: 20;
+	box-shadow: 
+		inset 0 1px 1px #ffffd3,
+		inset 0 -1px 1px rgba(39, 28, 20, 0.4),
+		inset 0 0 1px 2px #665331,
+		0 0 0 1px #000,
+		0 1px 6px 1px rgba(0, 0, 0, 0.55);
+}
+
+.inside {
+	position: relative;
+	top: 3px;
+	left: 3px;
+	width: calc(100% - 8px);
+	height: calc(100% - 8px);
+	border: solid 1px rgba(0, 0, 0, 0.8);
+	border-radius: 50px;
+	background: linear-gradient(#626262, #424242 9px, #323232);
+	box-shadow: 
+		inset 0 0 0 1px rgba(255, 255, 255, 0.1), 
+		inset 0 0 5px rgba(124, 102, 65, 0.1), 
+		0 -1px rgba(68, 59, 52, 0.8),
+		0 0 1px 1px #a79165,
+		0 1px #b6ba9a;
+}
+
+.inside a {
+	position: relative;
+	top: -4px;
+	left: -11px;
+	color: #a79165;
+	font-size: 16px;
+	font-family: Bryant;
+	letter-spacing: 0.2px;
+	text-shadow: 0 1px 1px rgba(0, 0, 0, 0.75);
+	cursor: default;
+}
+
+.hide {
+	display: inline-block;
+	position: relative;
+	width: 20px;
+	height: 100%;
+}
+
+#outside {
+	height: calc(100vh - 18px);
+	margin: 13px 5px 5px 5px;
 	border-radius: 10px;
 	background: #947a4f;
 	transition: opacity 0.2s cubic-bezier(0.7, 0.4, 0.8, 0.6);
@@ -47,7 +100,7 @@ body {
 }
 
 #header {
-	margin-bottom: 5px;
+	margin-bottom: 12px;
 }
 
 .encountertitle {
@@ -69,8 +122,9 @@ body {
 	text-shadow: 0 1px 1px rgba(0, 0, 0, 0.9);
 }
 
-.line {
+#line {
 	position: fixed;
+	top: 41px;
 	left: 19px;
 	width: calc(100% - 38px);
 	height: 3px;
@@ -78,45 +132,42 @@ body {
 	background: linear-gradient(#1F1F1F, #5A5A5A);
 }
 
-#overlay {
-	display: block;
-	position: relative;
-	top: 0px;
-	width: 100%;
-	height: calc(100% - 29px);
-	margin: 0;
-	padding: 0;
+#sline {
+	position: fixed;
+	bottom: 36px;
+	left: 19px;
+	width: calc(100% - 35px);
+	height: 3px;
+	border-radius: 10px;
+	background: linear-gradient(#1F1F1F, #5A5A5A);
 }
 
-.waiting {
-	display: block;
-	width: 100%;
-	color: #D8BB7D;
-	line-height: 50px;
-	font-size: 13px;
-	font-family: 微软雅黑;
-	text-align: center;
-}
-
-.dpslist {
+.alldps, .allhps {
 	height: calc(100% - 31px);
 	margin: 0;
 	padding: 0;
 	overflow: auto;
 }
 
-.dpslist::-webkit-scrollbar {
+.allhps {
+	display: none;
+}
+
+.alldps::-webkit-scrollbar, .allhps::-webkit-scrollbar {
 	width: 0;
 }
 
-#idps {
-	height: 24px;
-	margin: 0px 10px 10px 10px;
+.container > .alldps, .container > .allhps {
+	display: none !important;
+}
+
+#sdps, #shps {
+	margin: 0px 10px;
 	list-style: none;
 }
 
-#idps:first-child {
-	margin-top: 6px;
+.container > #sdps, .container > #shps {
+	display: none;
 }
 
 .icon {
@@ -126,11 +177,11 @@ body {
 	background-size: cover !important;
 }
 
-#dps {
+#dps, .hps {
 	display: inline-block;
 	position: relative;
 	top: -4px;
-	left: 6px;
+	left: 3px;
 	width: 70px;
 	color: #EEE1C5;
 	font-size: 26px;
@@ -144,8 +195,8 @@ body {
 	display: inline-block;
 	position: relative;
 	top: -7px;
-	left: 2px;
-	width: 80px;
+	left: -1px;
+	width: 90px;
 	color: #ECE1CD;
 	font-size: 12px;
 	font-family: 微软雅黑;
@@ -203,7 +254,25 @@ body {
 	color: #C6C6C6;
 }
 
+#overlay {
+	display: block;
+	position: relative;
+	top: 0px;
+	width: 100%;
+	height: calc(100% - 37px);
+	margin: 0;
+	padding: 0;
+}
 
+.waiting {
+	display: block;
+	width: 100%;
+	margin-top: 10px;
+	color: #D8BB7D;
+	font-size: 13px;
+	font-family: 微软雅黑;
+	text-align: center;
+}
 
 @-webkit-keyframes fullexpand {
 	0% {
