--- a/css/style.css
+++ b/css/style.css
@@ -1,259 +1,177 @@
-@font-face{
-    font-family: Bryant;
-    src : url('../lib/Bryant.ttf');
-}
-
-@font-face{
-    font-family: InputSans1;
-    src : url('../lib/SpaceMono.ttf');
-}
-
 body {
+	/*
+	height: 100vh;
+	box-sizing: border-box;
+	*/
 	margin: 0;
-	-webkit-user-select: none;
-	user-select: none;
+	border-style: solid;
+	border-width: 55px 20px 25px 20px;
+	border-image: url(../img/background.png) 55 20 25 20 fill repeat;
+	overflow-y: visible;
 }
 
-#handle {
-	position: fixed;
-	top: 5px;
-	right: 5px;
-	width: 90px;
-	height: 27px;
-	border-radius: 50px;
-	background: #947a4f;
-	z-index: 20;
-	box-shadow: 
-		inset 0 1px 1px #ffffd3,
-		inset 0 -1px 1px rgba(39, 28, 20, 0.4),
-		inset 0 0 1px 2px #665331,
-		0 0 0 1px #000,
-		0 1px 6px 1px rgba(0, 0, 0, 0.55);
-	display: none;
-}
-
-.inside {
-	position: relative;
-	top: 3px;
-	left: 3px;
-	width: calc(100% - 8px);
-	height: calc(100% - 8px);
-	border: solid 1px rgba(0, 0, 0, 0.8);
-	border-radius: 50px;
-	background: linear-gradient(#626262, #424242 9px, #323232);
-	box-shadow: 
-		inset 0 0 0 1px rgba(255, 255, 255, 0.1), 
-		inset 0 0 5px rgba(124, 102, 65, 0.1), 
-		0 -1px rgba(68, 59, 52, 0.8),
-		0 0 1px 1px #a79165,
-		0 1px #b6ba9a;
-}
-
-.inside a {
-	position: relative;
-	top: -1px;
-	left: 6px;
-	color: #a79165;
-	font-size: 16px;
-	font-family: Bryant;
-	letter-spacing: 0.2px;
-	text-shadow: 0 1px 1px rgba(0, 0, 0, 0.75);
-	cursor: default;
-}
-
-.open {
-	display: inline-block;
-	position: absolute;
-	width: 24px;
-	height: 20px;
-	top: -1px;
-	right: 2px;
-	background: url(../img/open.png);
-	background-size: cover;
-}
-
-.close {
-	display: inline-block;
-	position: absolute;
-	width: 24px;
-	height: 20px;
-	top: 2px;
-	right: 10px;
-	background: url(../img/close.png);
-	background-size: cover;
-}
-
-.reload {
-	display: inline-block;
-	position: absolute;
-	width: 24px;
-	height: 20px;
-	top: 2px;
-	right: 38px;
-	background: url(../img/reload.png);
-	background-size: cover;
-}
-
-#outside {
-	height: calc(100vh - 18px);
-	margin: 5px 5px 5px 5px;
-	border-radius: 10px;
-	background: #947a4f;
-	box-shadow: 
-		inset 0 1px 1px #ffffd3,
-		inset 0 -1px 1px rgba(39, 28, 20, 0.4),
-		inset 0 0 1px 2px #665331,
-		0 0 0 1px #000,
-		0 0 3px 2px rgba(0, 0, 0, 0.4),
-		0 2px 3px 1px rgba(0, 0, 0, 0.5);
-}
-
-.container {
-	position: relative;
-	top: 3px;
-	left: 3px;
-	width: calc(100% - 8px);
-	height: calc(100% - 8px);
-	border: solid 1px rgba(0, 0, 0, 0.8);
-	border-radius: 8px;
-	background: linear-gradient(#666, #494949 15px, #353535 35px, #323232 45px);
-	box-shadow: 
-		inset 0 0 0 1px rgba(255, 255, 255, 0.1), 
-		inset 0 0 6px 1px rgba(124, 102, 65, 0.4), 
-		0 -1px rgba(68, 59, 52, 0.8),
-		0 0 1px 1px #a79165,
-		0 1px #b6ba9a;
-}
-
-#header {
-	margin-bottom: 12px;
-}
-
-.encounterdetail {
-	display: inline-block;
-	margin: 3px 0 0 12px;
-	color: #C6C6C6;
-	font-size: 13px;
-	font-family: 微软雅黑;
-	text-shadow: 0 1px 1px rgba(0, 0, 0, 0.9);
-}
-
-#line {
-	position: fixed;
-	top: 34px;
-	left: 19px;
-	width: calc(100% - 38px);
-	height: 3px;
-	border-radius: 10px;
-	background: linear-gradient(#1F1F1F, #5A5A5A);
-}
-
-.alldps {
-	height: 100%;
-	margin: 0;
-	padding: 0;
-	overflow: auto;
-}
-
-.alldps::-webkit-scrollbar {
+body::-webkit-scrollbar {
 	width: 0;
 }
 
-.container > .alldps {
-	display: none !important;
+.container {
+	margin-top: -25px;
+	margin-bottom: -12px;
 }
 
-#eachdps {
-	margin: 0 10px 12px 10px;
+#header {
+	position: relative;
+	width: 100%;
+}
+
+li {
+	margin: -1px 0px;
+	padding: 0px;
 	list-style: none;
 }
 
-#eachdps:last-child {
-	margin: 0 10px 0 10px;
+.encountertitle {
+	position: absolute;
+	top: 15px;
+	left: 20px;
+	color: #C4C8C7;
+	font-size: 12px;
+	font-family: 微软雅黑;
 }
 
-.container > #eachdps {
+.duration {
+	position: absolute;
+	float: right;
+	top: 14px;
+	right: 21px;
+	color: #D8BB7D;
+	font-size: 13px;
+	font-weight: bold;
+	font-family: 微软雅黑;
+}
+
+.button {
+	position: relative;
+	display: inline-block;
+	width: calc(50% - 17px);
+	height: 20px;
+	margin: 3px 0;
+	border-style: solid;
+	border-width: 0 15px 0 15px;
+	border-image: url(../img/button-normal.png) 0 15 0 15 fill repeat;
+	color: #F2F2F2;
+	font-size: 12px;
+	text-align: center;
+	line-height: 20px;
+	font-family: 微软雅黑;
+	letter-spacing: 1px;
+}
+
+.bt-dps {
+	margin-left: -16px;
+}
+
+.bt-heal {
+	margin-left: -8px;
+	margin-right: -8px;
+}
+
+#source {
+	position: absolute;
 	display: none;
 }
 
-.icon {
-	display: inline-block;
-	width: 24px;
-	height: 24px;
-	background-size: cover !important;
+ul {
+	margin: 0;
+	padding: 9px 0 3px 0;
 }
 
-#dps {
-	display: inline-block;
+.job-icon {
 	position: relative;
-	top: -4px;
-	left: 3px;
-	width: 70px;
-	color: #EEE1C5;
-	font-size: 26px;
-	font-family: InputSans1;
-	letter-spacing: 0.08px;
-	text-shadow: 0 0 3px #E3A52B;
-	z-index: 10;
+	top: 8px;
+	margin-left: -2px;
+}
+
+.job-icon img {
+	width: 22px;
+	height: 22px;
+}
+
+.detail {
+	display: inline-block;
+	width: calc(100% - 27px);
+	margin-left: 3px;
 }
 
 .name {
 	display: inline-block;
-	position: relative;
-	top: -7px;
-	left: -1px;
-	width: 90px;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	overflow: hidden;
 	color: #ECE1CD;
 	font-size: 12px;
 	font-family: 微软雅黑;
 	letter-spacing: 0.8px;
-	white-space: nowrap;
-	overflow: hidden;
-	text-overflow: ellipsis;
 }
 
-.detail {
-	position: relative;
+.number {
+	display: inline-block;
 	float: right;
-	right: 2px;
 	color: #ECE1CD;
 	font-size: 12px;
 	font-family: 微软雅黑;
 }
 
-.background {
-	position: relative;
-	width: calc(100% - 29px);
+#content2 {
+	width: 100%;
 	height: 6px;
-	margin: -12px 0 0 29px;
+	margin: -3px auto 6px auto;
 	border-radius: 3px;
 	background: #444;
-	z-index: 5;
 }
 
 .bar {
 	display: block;
+	position: inherit;
 	width: 100%;
 	height: 6px;
 	border-radius: 3px;
+	position: inherit;
+}
+
+.inactive .bar {
+	background: #666;
 }
 
 #overlay {
-	display: block;
-	position: relative;
-	top: 0px;
+	position: inherit;
 	width: 100%;
-	height: calc(100% - 37px);
-	margin: 0;
-	padding: 0;
+	color: #D8BB7D;
+	font-size: 13px;
+	font-family: 微软雅黑;
+}
+
+.waitingtitle {
+	position: absolute;
+	top: 14px;
+	left: 20px;
+	color: #C4C8C7;
+	font-size: 12px;
+	font-family: 微软雅黑;
 }
 
 .waiting {
 	display: block;
 	width: 100%;
-	margin-top: 10px;
-	color: #D8BB7D;
-	font-size: 13px;
-	font-family: 微软雅黑;
+	margin: 6px 0 4px 0;
 	text-align: center;
+}
+
+@-webkit-keyframes fullexpand {
+	0% {
+		width: 0px;
+	}
+	100% {
+		width: 100%;
+	}
 }
