--- a/css/style.css
+++ b/css/style.css
@@ -1,169 +1,276 @@
-body {
-	/*
-	height: 100vh;
-	box-sizing: border-box;
-	*/
-	margin: 0;
-	border-style: solid;
-	border-width: 55px 20px 25px 20px;
-	border-image: url(../img/background.png) 55 20 25 20 fill repeat;
-	overflow-y: visible;
+@font-face{
+    font-family: Bryant;
+    src : url('../lib/Bryant.ttf');
 }
 
-body::-webkit-scrollbar {
-	width: 0;
+@font-face{
+    font-family: InputSans1;
+    src : url('../lib/SpaceMono.ttf');
+}
+
+body {
+	margin: 0;
+	-webkit-user-select: none;
+	user-select: none;
+}
+
+#handle {
+	position: fixed;
+	top: 1px;
+	right: 65px;
+	width: 125px;
+	height: 25px;
+	border-radius: 50px;
+	background: #947a4f;
+	z-index: 20;
+	box-shadow: 
+		inset 0 1px 1px #ffffd3,
+		inset 0 -1px 1px rgba(39, 28, 20, 0.4),
+		inset 0 0 1px 2px #665331,
+		0 0 0 1px #000,
+		0 1px 6px 1px rgba(0, 0, 0, 0.55);
+}
+
+.inside {
+	position: relative;
+	top: 3px;
+	left: 3px;
+	width: calc(100% - 8px);
+	height: calc(100% - 8px);
+	border: solid 1px rgba(0, 0, 0, 0.8);
+	border-radius: 50px;
+	background: linear-gradient(#626262, #424242 9px, #323232);
+	box-shadow: 
+		inset 0 0 0 1px rgba(255, 255, 255, 0.1), 
+		inset 0 0 5px rgba(124, 102, 65, 0.1), 
+		0 -1px rgba(68, 59, 52, 0.8),
+		0 0 1px 1px #a79165,
+		0 1px #b6ba9a;
+}
+
+.inside a {
+	position: relative;
+	top: -4px;
+	left: -11px;
+	color: #a79165;
+	font-size: 16px;
+	font-family: Bryant;
+	letter-spacing: 0.2px;
+	text-shadow: 0 1px 1px rgba(0, 0, 0, 0.75);
+	cursor: default;
+}
+
+.hide {
+	display: inline-block;
+	position: relative;
+	width: 20px;
+	height: 100%;
+}
+
+#outside {
+	height: calc(100vh - 18px);
+	margin: 13px 5px 5px 5px;
+	border-radius: 10px;
+	background: #947a4f;
+	transition: opacity 0.2s cubic-bezier(0.7, 0.4, 0.8, 0.6);
+	box-shadow: 
+		inset 0 1px 1px #ffffd3,
+		inset 0 -1px 1px rgba(39, 28, 20, 0.4),
+		inset 0 0 1px 2px #665331,
+		0 0 0 1px #000,
+		0 0 3px 2px rgba(0, 0, 0, 0.4),
+		0 2px 3px 1px rgba(0, 0, 0, 0.5);
 }
 
 .container {
-	margin-top: -25px;
-	margin-bottom: -12px;
+	position: relative;
+	top: 3px;
+	left: 3px;
+	width: calc(100% - 8px);
+	height: calc(100% - 8px);
+	border: solid 1px rgba(0, 0, 0, 0.8);
+	border-radius: 8px;
+	background: linear-gradient(#666, #494949 15px, #353535 35px, #323232 45px);
+	box-shadow: 
+		inset 0 0 0 1px rgba(255, 255, 255, 0.1), 
+		inset 0 0 6px 1px rgba(124, 102, 65, 0.4), 
+		0 -1px rgba(68, 59, 52, 0.8),
+		0 0 1px 1px #a79165,
+		0 1px #b6ba9a;
 }
 
 #header {
-	position: relative;
-	width: 100%;
-}
-
-li {
-	margin: -1px 0px;
-	padding: 0px;
-	list-style: none;
+	margin-bottom: 12px;
 }
 
 .encountertitle {
-	position: absolute;
-	top: 15px;
-	left: 20px;
-	color: #C4C8C7;
-	font-size: 12px;
+	display: inline-block;
+	margin: 3px 0 0 12px;
+	color: #C6C6C6;
+	font-size: 13px;
 	font-family: 微软雅黑;
+	text-shadow: 0 1px 1px rgba(0, 0, 0, 0.9);
 }
 
 .duration {
-	position: absolute;
+	margin: 3px 12px 0 0 ;
 	float: right;
-	top: 14px;
-	right: 21px;
 	color: #D8BB7D;
 	font-size: 13px;
 	font-weight: bold;
 	font-family: 微软雅黑;
+	text-shadow: 0 1px 1px rgba(0, 0, 0, 0.9);
 }
 
-.button {
-	position: relative;
-	display: inline-block;
-	width: calc(50% - 17px);
-	height: 20px;
-	margin: 3px 0;
-	border-style: solid;
-	border-width: 0 15px 0 15px;
-	border-image: url(../img/button-normal.png) 0 15 0 15 fill repeat;
-	color: #F2F2F2;
-	font-size: 12px;
-	text-align: center;
-	line-height: 20px;
-	font-family: 微软雅黑;
-	letter-spacing: 1px;
+#line {
+	position: fixed;
+	top: 41px;
+	left: 19px;
+	width: calc(100% - 38px);
+	height: 3px;
+	border-radius: 10px;
+	background: linear-gradient(#1F1F1F, #5A5A5A);
 }
 
-.bt-dps {
-	margin-left: -16px;
+#sline {
+	position: fixed;
+	bottom: 36px;
+	left: 19px;
+	width: calc(100% - 35px);
+	height: 3px;
+	border-radius: 10px;
+	background: linear-gradient(#1F1F1F, #5A5A5A);
 }
 
-.bt-heal {
-	margin-left: -8px;
-	margin-right: -8px;
+.alldps, .allhps {
+	height: calc(100% - 31px);
+	margin: 0;
+	padding: 0;
+	overflow: auto;
 }
 
-#source {
-	position: absolute;
+.allhps {
 	display: none;
 }
 
-ul {
-	margin: 0;
-	padding: 9px 0 3px 0;
+.alldps::-webkit-scrollbar, .allhps::-webkit-scrollbar {
+	width: 0;
 }
 
-.job-icon {
-	position: relative;
-	top: 8px;
-	margin-left: -2px;
+.container > .alldps, .container > .allhps {
+	display: none !important;
 }
 
-.job-icon img {
-	width: 22px;
-	height: 22px;
+#sdps, #shps {
+	margin: 0px 10px;
+	list-style: none;
 }
 
-.detail {
+.container > #sdps, .container > #shps {
+	display: none;
+}
+
+.icon {
 	display: inline-block;
-	width: calc(100% - 27px);
-	margin-left: 3px;
+	width: 24px;
+	height: 24px;
+	background-size: cover !important;
+}
+
+#dps, .hps {
+	display: inline-block;
+	position: relative;
+	top: -4px;
+	left: 3px;
+	width: 70px;
+	color: #EEE1C5;
+	font-size: 26px;
+	font-family: InputSans1;
+	letter-spacing: 0.08px;
+	text-shadow: 0 0 3px #E3A52B;
+	z-index: 10;
 }
 
 .name {
 	display: inline-block;
-	white-space: nowrap;
-	text-overflow: ellipsis;
-	overflow: hidden;
+	position: relative;
+	top: -7px;
+	left: -1px;
+	width: 90px;
 	color: #ECE1CD;
 	font-size: 12px;
 	font-family: 微软雅黑;
 	letter-spacing: 0.8px;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
-.number {
-	display: inline-block;
+.detail {
+	position: relative;
 	float: right;
+	right: 2px;
 	color: #ECE1CD;
 	font-size: 12px;
 	font-family: 微软雅黑;
 }
 
-#content2 {
-	width: 100%;
+.background {
+	position: relative;
+	width: calc(100% - 29px);
 	height: 6px;
-	margin: -3px auto 6px auto;
+	top: -12px;
+	left: 29px;
 	border-radius: 3px;
 	background: #444;
+	z-index: 5;
 }
 
 .bar {
 	display: block;
-	position: inherit;
 	width: 100%;
 	height: 6px;
 	border-radius: 3px;
-	position: inherit;
 }
 
-.inactive .bar {
-	background: #666;
+#button {
+	position: fixed;
+	bottom: 13px;
+	left: 21px;
+}
+
+#button a {
+	margin-right: 5px;
+	font-size: 13px;
+	font-family: 微软雅黑;
+	text-shadow: 0 1px 1px rgba(0, 0, 0, 0.9);
+}
+	
+.cdps {
+	color: #D8BB7D;
+}
+
+.chps {
+	color: #C6C6C6;
 }
 
 #overlay {
-	position: inherit;
+	display: block;
+	position: relative;
+	top: 0px;
 	width: 100%;
-	color: #D8BB7D;
-	font-size: 13px;
-	font-family: 微软雅黑;
-}
-
-.waitingtitle {
-	position: absolute;
-	top: 14px;
-	left: 20px;
-	color: #C4C8C7;
-	font-size: 12px;
-	font-family: 微软雅黑;
+	height: calc(100% - 37px);
+	margin: 0;
+	padding: 0;
 }
 
 .waiting {
 	display: block;
 	width: 100%;
-	margin: 6px 0 4px 0;
+	margin-top: 10px;
+	color: #D8BB7D;
+	font-size: 13px;
+	font-family: 微软雅黑;
 	text-align: center;
 }
 
