--- a/style.css
+++ b/style.css
@@ -1,11 +1,6 @@
 @font-face{
-    font-family: Bryant;
-    src : url('../lib/Bryant.ttf');
-}
-
-@font-face{
-    font-family: InputSans1;
-    src : url('../lib/SpaceMono.ttf');
+    font-family: SpaceMono;
+    src : url('lib/font/SpaceMono.ttf');
 }
 
 body {
@@ -14,62 +9,9 @@ body {
 	user-select: none;
 }
 
-#handle {
-	position: fixed;
-	top: 1px;
-	right: 65px;
-	width: 125px;
-	height: 25px;
-	border-radius: 50px;
-	background: #947a4f;
-	z-index: 20;
-	box-shadow: 
-		inset 0 1px 1px #ffffd3,
-		inset 0 -1px 1px rgba(39, 28, 20, 0.4),
-		inset 0 0 1px 2px #665331,
-		0 0 0 1px #000,
-		0 1px 6px 1px rgba(0, 0, 0, 0.55);
-}
-
-.inside {
-	position: relative;
-	top: 3px;
-	left: 3px;
-	width: calc(100% - 8px);
-	height: calc(100% - 8px);
-	border: solid 1px rgba(0, 0, 0, 0.8);
-	border-radius: 50px;
-	background: linear-gradient(#626262, #424242 9px, #323232);
-	box-shadow: 
-		inset 0 0 0 1px rgba(255, 255, 255, 0.1), 
-		inset 0 0 5px rgba(124, 102, 65, 0.1), 
-		0 -1px rgba(68, 59, 52, 0.8),
-		0 0 1px 1px #a79165,
-		0 1px #b6ba9a;
-}
-
-.inside a {
-	position: relative;
-	top: -4px;
-	left: -11px;
-	color: #a79165;
-	font-size: 16px;
-	font-family: Bryant;
-	letter-spacing: 0.2px;
-	text-shadow: 0 1px 1px rgba(0, 0, 0, 0.75);
-	cursor: default;
-}
-
-.hide {
-	display: inline-block;
-	position: relative;
-	width: 20px;
-	height: 100%;
-}
-
-#outside {
-	height: calc(100vh - 18px);
-	margin: 13px 5px 5px 5px;
+#border {
+	height: calc(100vh - 10px);
+	margin: 5px 5px 5px 5px;
 	border-radius: 10px;
 	background: #947a4f;
 	transition: opacity 0.2s cubic-bezier(0.7, 0.4, 0.8, 0.6);
@@ -100,7 +42,7 @@ body {
 }
 
 #header {
-	margin-bottom: 12px;
+	margin-bottom: 5px;
 }
 
 .encountertitle {
@@ -122,9 +64,8 @@ body {
 	text-shadow: 0 1px 1px rgba(0, 0, 0, 0.9);
 }
 
-#line {
+.line {
 	position: fixed;
-	top: 41px;
 	left: 19px;
 	width: calc(100% - 38px);
 	height: 3px;
@@ -132,42 +73,45 @@ body {
 	background: linear-gradient(#1F1F1F, #5A5A5A);
 }
 
-#sline {
-	position: fixed;
-	bottom: 36px;
-	left: 19px;
-	width: calc(100% - 35px);
-	height: 3px;
-	border-radius: 10px;
-	background: linear-gradient(#1F1F1F, #5A5A5A);
+#overlay {
+	display: block;
+	position: relative;
+	top: 0px;
+	width: 100%;
+	height: calc(100% - 29px);
+	margin: 0;
+	padding: 0;
 }
 
-.alldps, .allhps {
+.waiting {
+	display: block;
+	width: 100%;
+	color: #D8BB7D;
+	line-height: 50px;
+	font-size: 13px;
+	font-family: 微软雅黑;
+	text-align: center;
+}
+
+.dpslist {
 	height: calc(100% - 31px);
 	margin: 0;
 	padding: 0;
 	overflow: auto;
 }
 
-.allhps {
-	display: none;
-}
-
-.alldps::-webkit-scrollbar, .allhps::-webkit-scrollbar {
+.dpslist::-webkit-scrollbar {
 	width: 0;
 }
 
-.container > .alldps, .container > .allhps {
-	display: none !important;
-}
-
-#sdps, #shps {
-	margin: 0px 10px;
+#idps {
+	height: 24px;
+	margin: 0px 10px 10px 10px;
 	list-style: none;
 }
 
-.container > #sdps, .container > #shps {
-	display: none;
+#idps:first-child {
+	margin-top: 6px;
 }
 
 .icon {
@@ -177,15 +121,15 @@ body {
 	background-size: cover !important;
 }
 
-#dps, .hps {
+#dps {
 	display: inline-block;
 	position: relative;
 	top: -4px;
-	left: 3px;
+	left: 6px;
 	width: 70px;
 	color: #EEE1C5;
 	font-size: 26px;
-	font-family: InputSans1;
+	font-family: SpaceMono;
 	letter-spacing: 0.08px;
 	text-shadow: 0 0 3px #E3A52B;
 	z-index: 10;
@@ -195,8 +139,8 @@ body {
 	display: inline-block;
 	position: relative;
 	top: -7px;
-	left: -1px;
-	width: 90px;
+	left: 2px;
+	width: 80px;
 	color: #ECE1CD;
 	font-size: 12px;
 	font-family: 微软雅黑;
@@ -252,26 +196,6 @@ body {
 
 .chps {
 	color: #C6C6C6;
-}
-
-#overlay {
-	display: block;
-	position: relative;
-	top: 0px;
-	width: 100%;
-	height: calc(100% - 37px);
-	margin: 0;
-	padding: 0;
-}
-
-.waiting {
-	display: block;
-	width: 100%;
-	margin-top: 10px;
-	color: #D8BB7D;
-	font-size: 13px;
-	font-family: 微软雅黑;
-	text-align: center;
 }
 
 @-webkit-keyframes fullexpand {
